--- a/loginpage1.html
+++ b/loginpage1.html
@@ -239,7 +239,7 @@
         else if (passd == 0 && urname == '') {
             alert('Please enter your username and password')
         }
-        else if (passd == 777 && urname == 'sagar46') {
+        else if (passd == 777 && urname == 'Manju65') {
             alert(`WELCOME Mr.${urname}`);
             window.location.href="netk.html";
 
