--- a/netk.html
+++ b/netk.html
@@ -166,7 +166,8 @@
         .top {
             background-color: rgb(13, 13, 13);
             color: rgb(255, 255, 255);
-            border-radius: 40px;
+            height:30px;
+            border-radius: 15px;
             border: none;
             font-size: 1cm;
             box-shadow: 2px 2px 80px rgba(255, 255, 255, 0.572);
@@ -431,16 +432,16 @@
 
           <div class="box-0">
 
+               <div class="box-1">
+                <div class="preview"><img class="dp" src="https://images-cdn.ubuy.co.in/635c222da2d2c66bf7645132-casino-royale-james-bond-movie-poster.jpg" alt="tommy shelby"><span style=" color: white; position:absolute; bottom:0; left: 10%; right: 10%; ; font-family: lucida sans; font-weight: 600; background-color: red; font-size: small; border-top-right-radius: 7px; border-top-left-radius: 7px; padding-left: 5px; padding-right: 5px; padding-top: 2px; padding-bottom: 2px; text-align: center;">Recently added</span><span style="position: absolute; left: 30px; top: -52px; border-radius: 4px; " ><img src="https://i.pinimg.com/originals/c3/6c/53/c36c53f31f2b08cd018d8b02a83f986d.jpg" class="columbia-img"></span></div>
+                <div class="film-title">Casino Royale</div>
+                <div class="duration-ep">2 Hrs 07 Mins</div>
+           </div>
+
             <div class="box-1">
                 <div class="preview"><img class="dp" src="https://c.saavncdn.com/657/Marco-Malayalam-2024-20241220224531-500x500.jpg" alt="pic didn't load"></div>
                 <div class="film-title">Marco </div>
                 <div class="duration-ep">2Hr 56min</div>
-           </div>
-     
-            <div class="box-1">
-                <div class="preview"><img class="dp" src="https://images-cdn.ubuy.co.in/635c222da2d2c66bf7645132-casino-royale-james-bond-movie-poster.jpg" alt="tommy shelby"><span style=" color: white; position:absolute; bottom:0; left: 10%; right: 10%; ; font-family: lucida sans; font-weight: 600; background-color: red; font-size: small; border-top-right-radius: 7px; border-top-left-radius: 7px; padding-left: 5px; padding-right: 5px; padding-top: 2px; padding-bottom: 2px; text-align: center;">Recently added</span><span style="position: absolute; left: 30px; top: -52px; border-radius: 4px; " ><img src="https://i.pinimg.com/originals/c3/6c/53/c36c53f31f2b08cd018d8b02a83f986d.jpg" class="columbia-img"></span></div>
-                <div class="film-title">Casino Royale</div>
-                <div class="duration-ep">2 Hrs 07 Mins</div>
            </div>
 
            <div class="box-1">
@@ -533,6 +534,7 @@
           <center><a href="#toplink"><span class="top">&#8593</span></a></center>
 
 
+  <span style="color:rgba(245, 222, 179, 0.728);font-size: 10px; position: fixed; bottom: 0; ">This material is solely intended for individual use.The author does not intend to violate copyright- <br>regulations nor does he endorse or promote any 'Over-the-top' platforms. </span>
 
   
 
