--- a/loginpage1.html
+++ b/loginpage1.html
@@ -14,7 +14,7 @@
             right: 40%;
             translate: -50% -50%;
             z-index: 1;
-            background-image: linear-gradient(to right,yellow);
+            background:none;
             opacity: 100%;
             user-select: none;
             animation-name: spin;
