--- a/loginpage1.html
+++ b/loginpage1.html
@@ -223,10 +223,9 @@
         else if (passd == 0 && urname == '') {
             alert('Please enter your username and password')
         }
-        else if (passd == 777 && urname == 'Manju65') {
+        else if (passd == 777 && urname == 'SHUCHINDRA65') {
             alert(`WELCOME Mr.${urname}`);
             window.location.href="netk.html";
-
         }
          else if (passd == 0) {
             alert('PLEASE ENTER UR PASSWORD')
